--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url("fonts.css"); /* CSS Fonts */
 @import url("animate.css"); /* CSS Animate */
 @import url("hamburgers.min.css"); /* CSS Hamburger Icon */
+@import url("superslides.css"); /* CSS Superslides */
 
 /* Inizio CSS ******************************/
 
@@ -28,7 +29,7 @@ h7 { display: none; }
 	display: block;
 	position: relative;
 	width: 100%;
-	height: calc(100% - 1em);
+	height: calc(100% - 2em);
 	overflow: hidden;
 }
 
@@ -45,6 +46,11 @@ a:link { text-decoration: none; }
 	width: 100%;
 	height: 1em;
 	overflow: hidden;
+	-webkit-box-shadow: 0px 0px 25px rgba(0, 0, 0, .7);
+	-moz-box-shadow: 0px 0px 25px rgba(0, 0, 0, .7);
+	-o-box-shadow: 0px 0px 25px rgba(0, 0, 0, .7);
+	box-shadow: 0px 0px 25px rgba(0, 0, 0, .7);
+	z-index: 1000;
 }
 
 /* Sezioni */
@@ -281,13 +287,12 @@ a:link { text-decoration: none; }
 
 /* Sezioni */
 
-.box_link:hover .box_home
+.box_link:hover .box_home, .box_link:hover .box_progetti
 {
 	-webkit-box-shadow: inset 0px 0px 50px rgba(0, 0, 0, .7);
 	-moz-box-shadow: inset 0px 0px 50px rgba(0, 0, 0, .7);
 	-o-box-shadow: inset 0px 0px 50px rgba(0, 0, 0, .7);
 	box-shadow: inset 0px 0px 50px rgba(0, 0, 0, .7);
-	background-size: 200%;
 }
 
 .box_link:hover .box_sfondo
@@ -302,6 +307,7 @@ a:link { text-decoration: none; }
 {
 	color: #fff;
 	top: 35%;
+	letter-spacing: 8px;
 }
 
 .box_home
@@ -314,9 +320,8 @@ a:link { text-decoration: none; }
 	max-height: 50%;
 	float: left;
 	background-color: #d1d1d1;
-	/*background-image: url("");*/
 	background-attachment: scroll;
-	background-size: 100%;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
 }
@@ -341,14 +346,6 @@ a:link { text-decoration: none; }
 	margin: 0 auto;
 }
 
-#projects { background-image: url("../img/projects_home.png"); }
-
-#activities { background-image: url("../img/activities_home.png"); }
-
-#showroom { background-image: url("../img/showroom_home.png"); }
-
-#contacts { background-image: url("../img/contacts_home.png"); }
-
 /* Titoli */
 
 .box_titolo
@@ -370,17 +367,81 @@ a:link { text-decoration: none; }
 	margin: 0;
 }
 
+/* Projects ******************************/
+
+#progetti
+{
+	display: block;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+}
+
+.box_progetti
+{
+	display: inline-block;
+	position: relative;
+	width: 33.3%;
+	height: 50%;
+	min-height: 50%;
+	max-height: 50%;
+	float: left;
+	background-color: #d1d1d1;
+	background-attachment: scroll;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+/* SlideShow ******************************/
+
+.slideshow
+{
+	display: block;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+}
+
+.foto
+{
+	display: block;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+	background-size: cover;
+	background-attachment: scroll;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+/* House ******************************/
+
+#progetti_house
+{
+	display: block;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
+}
+
 /* Cookies ******************************/
 
 #banner_cookies { display: none; }
 
 /* Transizioni ******************************/
 
-.box_home { transition: box-shadow .3s ease-in-out .3s, background-size 10s ease-out; }
+.box_home { transition: box-shadow .3s ease-in-out .3s, background-size 1s ease-out; }
+
+.box_progetti { transition: box-shadow .3s ease-in-out .3s, background-size 1s ease-out; }
 
 .box_sfondo { transition: all .5s ease-in-out; }
 
-.box_titolo { transition: all .3s ease-in-out .5s; }
+.box_titolo { transition: color .3s ease-in-out .5s, top .3s ease-in-out .5s, letter-spacing 1s ease-in-out .3s; }
 
 .etichetta_pulsante { transition: all .3s ease-in-out; }
 
