--- a/css/fonts.css
+++ b/css/fonts.css
@@ -12,11 +12,35 @@
 
 /* Webfont: GothamCondensed-Medium */@font-face {
     font-family: 'GothamCondensed';
-    src: url('GothamCondensed-Medium.eot'); /* IE9 Compat Modes */
-    src: url('GothamCondensed-Medium.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('GothamCondensed-Medium.woff') format('woff'), /* Modern Browsers */
-         url('GothamCondensed-Medium.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('GothamCondensed-Medium.svg#GothamCondensed-Medium') format('svg'); /* Legacy iOS */
+    src: url('fonts/Gotham Condensed/GothamCondensed-Medium.eot'); /* IE9 Compat Modes */
+    src: url('fonts/Gotham Condensed/GothamCondensed-Medium.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('fonts/Gotham Condensed/GothamCondensed-Medium.woff') format('woff'), /* Modern Browsers */
+         url('fonts/Gotham Condensed/GothamCondensed-Medium.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('fonts/Gotham Condensed/GothamCondensed-Medium.svg#GothamCondensed-Medium') format('svg'); /* Legacy iOS */
+    font-style: normal;
+    font-weight: normal;
+    text-rendering: optimizeLegibility;
+}
+
+/* Webfont: GothamCondensed-Book */@font-face {
+    font-family: 'GothamCondensedBook';
+    src: url('fonts/Gotham Condensed Book/GothamCondensed-Book.eot'); /* IE9 Compat Modes */
+    src: url('fonts/Gotham Condensed Book/GothamCondensed-Book.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('fonts/Gotham Condensed Book/GothamCondensed-Book.woff') format('woff'), /* Modern Browsers */
+         url('fonts/Gotham Condensed Book/GothamCondensed-Book.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('fonts/Gotham Condensed Book/GothamCondensed-Book.svg#GothamCondensed-Book') format('svg'); /* Legacy iOS */
+    font-style: normal;
+    font-weight: normal;
+    text-rendering: optimizeLegibility;
+}
+
+/* Webfont: GothamCondensed-Light */@font-face {
+    font-family: 'GothamCondensedLight';
+    src: url('fonts/Gotham Condensed Light/GothamCondensed-Light.eot'); /* IE9 Compat Modes */
+    src: url('fonts/Gotham Condensed Light/GothamCondensed-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('fonts/Gotham Condensed Light/GothamCondensed-Light.woff') format('woff'), /* Modern Browsers */
+         url('fonts/Gotham Condensed Light/GothamCondensed-Light.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('fonts/Gotham Condensed Light/GothamCondensed-Light.svg#GothamCondensed-Light') format('svg'); /* Legacy iOS */
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
